# bdapoker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  todo.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: connection_manager.py  decks.py  main.py  models.py  rooms.py  ws.py
backend/tests/: conftest.py  test_api.py  test_connection_manager.py  test_decks.py  test_models.py  test_rooms.py  test_ws.py
frontend/: package-lock.json  package.json
frontend/src/lib/: types.ts
frontend/src/lib/components/: Card.svelte  CardDeck.svelte  JoinForm.svelte  LanguageSwitcher.svelte  ModeratorControls.svelte  ParticipantList.svelte  StoryField.svelte  Timer.svelte  VoteResults.svelte
frontend/src/lib/i18n/: de.ts  en.ts  index.ts
frontend/src/lib/stores/: room.ts  websocket.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/room/[id]/: +page.svelte
helm/bdapoker/: Chart.yaml  values.yaml
helm/bdapoker/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
