[project]
name = "bdapoker-backend"
version = "0.1.0"
description = "Planning Poker — real-time agile estimation for teams"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "BlueDynamics Alliance" },
]
keywords = ["planning-poker", "agile", "estimation", "scrum", "websocket"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "shortuuid>=1.0",
]

[project.urls]
Homepage = "https://github.com/bluedynamics/bdapoker"
Repository = "https://github.com/bluedynamics/bdapoker"
Issues = "https://github.com/bluedynamics/bdapoker/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
